ref #842 remove many deprecated in source