@@ -19,45 +19,44 @@
 
 package com.twinsoft.convertigo.eclipse.dialogs;
 
-import org.eclipse.swt.widgets.Composite;
-import org.eclipse.swt.widgets.Label;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
 import org.eclipse.swt.SWT;
-import org.eclipse.swt.widgets.Combo;
-import org.eclipse.swt.widgets.Button;
-import org.eclipse.swt.layout.GridLayout;
-import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.layout.GridData;
+import org.eclipse.swt.layout.GridLayout;
+import org.eclipse.swt.widgets.Button;
+import org.eclipse.swt.widgets.Combo;
+import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Label;
 
 class MobileApplicationTranslationsDialogComposite extends MyAbstractDialogComposite {
 
 	private List<String> languages = null;
-	
+
 	private Combo cbFrom, cbTo;
 	private Button btnAuto;
 	private Label lbLangFrom;
 	private Label lbLangTo;
-	
+
 	public MobileApplicationTranslationsDialogComposite(Composite parent, int style) {
 		super(parent, style);
 	}
-	
+
 	@Override
 	protected void initialize() {
 		GridLayout gridLayout = new GridLayout();
 		gridLayout.numColumns = 3;
 		this.setLayout(gridLayout);
-		
+
 		Label lbFrom = new Label(this, SWT.NONE);
 		lbFrom.setText("Please select the source language:");
 		lbFrom.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, false, false, 1, 1));
-		
+
 		cbFrom = new Combo(this, SWT.READ_ONLY);
 		cbFrom.addSelectionListener(new SelectionAdapter() {
 			@Override
@@ -68,15 +67,15 @@ class MobileApplicationTranslationsDialogComposite extends MyAbstractDialogCompo
 		cbFrom.setItems(getLanguages());
 		cbFrom.select(getIndex(Locale.getDefault().getLanguage()));
 		cbFrom.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, false, false, 1, 1));
-		
+
 		lbLangFrom = new Label(this, SWT.NONE);
 		lbLangFrom.setText(Locale.getDefault().getDisplayLanguage());
 		lbLangFrom.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false, 1, 1));
-		
+
 		Label lbTo = new Label(this, SWT.NONE);
 		lbTo.setText("Please select the target language:");
 		lbTo.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, false, false, 1, 1));
-		
+
 		cbTo = new Combo(this, SWT.READ_ONLY);
 		cbTo.addSelectionListener(new SelectionAdapter() {
 			@Override
@@ -87,20 +86,20 @@ class MobileApplicationTranslationsDialogComposite extends MyAbstractDialogCompo
 		cbTo.setItems(getLanguages());
 		cbTo.select(getIndex(Locale.getDefault().getLanguage()));
 		cbTo.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, false, false, 1, 1));
-		
+
 		lbLangTo = new Label(this, SWT.NONE);
 		lbLangTo.setText(Locale.getDefault().getDisplayLanguage());
 		lbLangTo.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false, 1, 1));
-		
+
 		btnAuto = new Button(this, SWT.CHECK | SWT.WRAP);
 		btnAuto.setText(" Automatic translation from source to target language ?\n(using Free Google Translate API - limited by quotas)");
 		btnAuto.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false, 3, 1));
-		
+
 		Label lbInfo = new Label(this, SWT.WRAP);
 		String s = 	"\nFor each of the source and target languages, if no translation file exists, it will be created in the " +
-					"\"DisplayObjects/mobile/assets/i18n\" directory of your project: <language>.json." +
-					"\nIf the file exists, it will simply be updated: the previous translations will not be modified." + 
-					"\nIf you want to perform automatic translation from the source language to the target one, please check the option.";
+				"\"DisplayObjects/mobile/assets/i18n\" directory of your project: <language>.json." +
+				"\nIf the file exists, it will simply be updated: the previous translations will not be modified." + 
+				"\nIf you want to perform automatic translation from the source language to the target one, please check the option.";
 		lbInfo.setText(s);
 		lbInfo.setLayoutData(new GridData(SWT.FILL, SWT.FILL, true, true, 3, 1));
 	}
@@ -119,23 +118,23 @@ class MobileApplicationTranslationsDialogComposite extends MyAbstractDialogCompo
 		}
 		return languages.toArray(new String[languages.size()]);
 	}
-	
+
 	private int getIndex(String language) {
 		return languages.indexOf(language);
 	}
-	
+
 	private String getLanguage(Combo cb) {
-		Locale locale = new Locale(cb.getText());
+		Locale locale = Locale.of(cb.getText());
 		return locale.getDisplayLanguage();
 	}
-	
+
 	@Override
 	public Object getValue(String name) {
 		if ("from".equals(name)) {
-			return new Locale(cbFrom.getText());
+			return Locale.of(cbFrom.getText());
 		}
 		if ("to".equals(name)) {
-			return new Locale(cbTo.getText());
+			return Locale.of(cbTo.getText());
 		}
 		if ("auto".equals(name)) {
 			return btnAuto.getSelection();
